--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17246136" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
+                                    <a href="https://circuitverse.org/">CircuitVerse – Online Digital Circuit Simulator</a>
                                 </span>
                             </td>
                         </tr>
@@ -221,7 +221,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17237792">
                                         
-                                            277 comments
+                                            280 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    348 points
+                                    349 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528377003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528377605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
