--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.cloudflare.com/welcome-hidden-resolver/">Introducing DNS Resolver for Tor</a>
+                                    <a href="https://bytemybits.gitlab.io/post/2018-05-23-how-to-android-without-google-easy-way/">How to Android without Google</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246466">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213808">
                                         
-                                            86 comments
+                                            98 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=XzetaU8">XzetaU8</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528288121"
+                                            href="https://news.ycombinator.com/user?id=schrodingersbox">schrodingersbox</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527933214"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    236 points
+                                    238 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528378804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528379405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
