--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-9.html">TypeScript 2.9 is now available</a>
+                                    <a href="https://story.californiasunday.com/infosys-india-tech">The end of India’s ‘IT miracle’?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242026">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252947">
                                         
-                                            58 comments
+                                            298 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528232589"
+                                            href="https://news.ycombinator.com/user?id=fourmii">fourmii</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528340858"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     234 points
                                 </span>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://kb.apify.com/tips-and-tricks/several-tips-how-to-bypass-website-anti-scraping-protections">Bypassing website anti-scraping protections</a>
+                                    <a href="http://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-9.html">TypeScript 2.9 is now available</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17203903">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242026">
                                         
-                                            118 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jardah">jardah</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527846557"
+                                            href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528232589"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     234 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528388404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528389004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
