--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://story.californiasunday.com/infosys-india-tech">The end of India’s ‘IT miracle’?</a>
+                                    <a href="https://kb.apify.com/tips-and-tricks/several-tips-how-to-bypass-website-anti-scraping-protections">Bypassing website anti-scraping protections</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252947">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17203903">
                                         
-                                            294 comments
+                                            118 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fourmii">fourmii</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528340858"
+                                            href="https://news.ycombinator.com/user?id=jardah">jardah</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527846557"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    229 points
+                                    234 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            201 comments
+                                            203 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528388404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528389004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
