--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.google/topics/ai/ai-principles/">AI at Google: our principles</a>
+                                    <a href="https://www.theverge.com/circuitbreaker/2018/6/5/17428806/samsung-chromebook-plus-linux-app-support-beta-launched">Samsung’s Chromebook Plus now supports Linux apps</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17259082">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17237183">
                                         
-                                            74 comments
+                                            57 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528398267"
+                                            href="https://news.ycombinator.com/user?id=artsandsci">artsandsci</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528203401"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    117 points
+                                    118 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17236294">
                                         
-                                            33 comments
+                                            34 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jchadhowell">jchadhowell</a></strong> &nbsp;•&nbsp;
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528402205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528402805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
