--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -245,7 +245,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            338 comments
+                                            339 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reuters.com/article/us-facebook-privacy-congress/facebook-confirms-data-sharing-with-chinese-companies-idUSKCN1J11TY">Facebook confirms data sharing with Chinese companies</a>
+                                    <a href="https://andrewkelley.me/post/full-time-zig.html">I Quit My Job to Live on Donations</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246437">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17256394">
                                         
-                                            82 comments
+                                            169 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528287882"
+                                            href="https://news.ycombinator.com/user?id=AndyKelley">AndyKelley</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528384048"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     298 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528407604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528408205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
