--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.boxfactura.com/pulltorefresh.js/">Pull to Refresh.js</a>
+                                    <a href="https://www.theguardian.com/technology/2018/jun/06/planned-laws-to-force-tech-firms-to-reveal-encrypted-data">Australia drafts laws forcing Facebook and Google to reveal encrypted data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17256443">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17245032">
                                         
                                             68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528384308"
+                                            href="https://news.ycombinator.com/user?id=Ours90">Ours90</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528270095"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    177 points
+                                    178 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528390715"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    159 points
+                                    160 points
                                 </span>
                             </td>
                         </tr>
@@ -509,7 +509,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17257291">
                                         
-                                            131 comments
+                                            132 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ThomPete">ThomPete</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528442404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528443004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
