--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/higgsfield/RL-Adventure-2">Reinforcement Learning: From Zero to State of the Art with Pytorch 4</a>
+                                    <a href="https://sparktoro.com/blog/raised-a-very-unusual-round-of-funding-were-open-sourcing-our-docs/">Raising a Very Unusual Round of Funding and Open-Sourcing Our Docs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17261063">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17256923">
                                         
-                                            8 comments
+                                            31 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528411873"
+                                            href="https://news.ycombinator.com/user?id=rchaudhary">rchaudhary</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528386584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    125 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528443604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528444206" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
