--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.newyorker.com/books/under-review/the-bullshit-job-boom">For more and more people, work appears to serve no purpose</a>
+                                    <a href="https://www.7pace.com/blog/software-development-planning-fallacy">Why Development Teams Struggle to Deliver on Time, on Budget, or at All</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17260911">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17237468">
                                         
-                                            244 comments
+                                            229 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wyclif">wyclif</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528410572"
+                                            href="https://news.ycombinator.com/user?id=encorekt">encorekt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528206065"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    259 points
+                                    261 points
                                 </span>
                             </td>
                         </tr>
@@ -365,7 +365,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17259063">
                                         
-                                            100 comments
+                                            101 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528454404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528455005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
